--- a/addbook.html
+++ b/addbook.html
@@ -20,7 +20,10 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f7f7f7;
-            color: white;
+            /* color: white; */
+            /* font-size: x-large; */
+            /* font-weight:bolder; */
+            /* color:darkblue; */
             margin: 0;
             padding: 0;
         }
@@ -45,13 +48,14 @@
 
         th,
         td {
+            background-color:aliceblue;
             padding: 1em;
             text-align: left;
             border: 2px solid white;
         }
 
         th {
-            background-color:whitesmoke;
+            background-color:aqua;
             color:black;
         }
 
